<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_country_default"
        android:dialogTitle="@string/country_dialog_title"
        android:entries="@array/settings_country_labels"
        android:entryValues="@array/settings_country_values"
        android:key="@string/settings_country_key"
        android:title="@string/settings_country_label"/>

    <EditTextPreference
        android:defaultValue="@string/articles_default"
        android:dialogTitle="@string/number_articles_dialog_text"
        android:inputType="number"
        android:key="@string/settings_number_articles_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_number_articles_label"/>

</PreferenceScreen>